@@ -23,7 +23,6 @@ import io.netty.util.CharsetUtil;
 import org.apache.tinkerpop.gremlin.driver.MessageSerializer;
 import org.apache.tinkerpop.gremlin.driver.message.RequestMessage;
 import org.apache.tinkerpop.gremlin.driver.ser.SerializationException;
-import org.apache.tinkerpop.gremlin.driver.ser.Serializers;
 import io.netty.buffer.ByteBuf;
 import io.netty.channel.ChannelHandlerContext;
 import org.slf4j.Logger;
@@ -37,7 +36,6 @@ import java.util.Map;
  */
 public class NioGremlinBinaryRequestDecoder extends ReplayingDecoder<NioGremlinBinaryRequestDecoder.DecoderState> {
     private static final Logger logger = LoggerFactory.getLogger(NioGremlinBinaryRequestDecoder.class);
-
     private final Map<String, MessageSerializer> serializers;
     private int messageLength;
 
@@ -59,7 +57,9 @@ public class NioGremlinBinaryRequestDecoder extends ReplayingDecoder<NioGremlinB
                     final ByteBuf contentTypeFrame = messageFrame.readBytes(contentTypeLength);
                     final String contentType = contentTypeFrame.toString(CharsetUtil.UTF_8);
 
-                    final MessageSerializer serializer = select(contentType, Serializers.DEFAULT_REQUEST_SERIALIZER);
+                    // the default serializer to use has been GraphSON 1.0 to this point (which was probably bad),
+                    // so maintain that for 3.3.x
+                    final MessageSerializer serializer = select(contentType, ServerSerializers.DEFAULT_SERIALIZER);
 
                     // it's important to re-initialize these channel attributes as they apply globally to the channel. in
                     // other words, the next request to this channel might not come with the same configuration and mixed
